--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<name>coronavirus-tracker</name>
 	<description>My first project with Spring Boot</description>
 	<properties>
-		<java.version>12</java.version>
+		<java.version>15</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -24,6 +24,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
+			<version>1.8</version>
 		</dependency>
 
 		<dependency>
